--- a/scss/_classes.scss
+++ b/scss/_classes.scss
@@ -1,17 +1,17 @@
 /** @format */
 
 .title {
-  &-small {
-    letter-spacing: 0.5rem;
-    font-size: 1.7rem;
-  }
+	&-small {
+		letter-spacing: 0.5rem;
+		font-size: 1.7rem;
+	}
 }
 
 .text {
-  &-primary {
-    color: var(--primary);
-  }
-  &-hint {
-    color: var(--hint);
-  }
+	&-primary {
+		color: var(--light);
+	}
+	&-hint {
+		color: var(--hint);
+	}
 }
