--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,14 +1,15 @@
 /** @format */
 
 :root {
-  --fontfamily: "Mulish", sans-serif;
+	--fontfamily: 'Mulish', sans-serif;
 
-  // COlORS
-  --light: #00c3ff;
-  --primary: #2071e7;
-  --dark: #2980b9;
-  --text: #333;
-  --background: #fafafa;
-  --hint: #999;
-  --border: #ddd;
+	// COlORS
+	--light: #74deff;
+	--primary: #393b3e;
+	--dark: #107bb0;
+	--text: #333;
+	--background: #fafafa;
+	--hint: #999;
+	--border: #ddd;
+	--ln: #0a66c2;
 }
