--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ img {
 }
 
 .text-primary {
-  color: var(--primary);
+  color: var(--light);
 }
 .text-hint {
   color: var(--hint);
@@ -199,7 +199,7 @@ aside .block .social-container {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 1rem 1rem;
+  padding: 1rem 2rem;
   border-radius: 5px;
   transition: all 0.2s;
   cursor: pointer;
@@ -208,8 +208,8 @@ aside .block .social-container:hover {
   background: var(--border);
 }
 aside .block .social-container:hover i {
-  color: var(--primary);
-  transform: scale(1.3);
+  color: var(--ln);
+  transform: scale(1.5);
   transition: all 0.2s;
 }
 aside .block .social-container i {
