--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,11 @@ img {
     transform: rotate(0deg);
   }
 }
-/* Landscape phones and down */
+/**
+ * Landscape phones and down
+ *
+ * @format
+ */
 /* Landscape phone to portrait tablet */
 /* Portrait tablet to landscape and desktop */
 /* Large desktop */
@@ -93,7 +97,7 @@ img {
   min-height: 100vh;
   grid: "picture header" auto "aside main" 1fr "footer footer" auto/350px auto;
 }
-@media (max-width: 480px) {
+@media (max-width: 375px) {
   .grid-container {
     grid: "header" auto "main" auto "picture" auto "aside" auto "footer" auto/auto;
   }
@@ -111,7 +115,7 @@ header {
   justify-content: center;
   align-items: center;
 }
-@media (max-width: 480px) {
+@media (max-width: 375px) {
   header {
     padding: 5rem 2rem;
   }
@@ -122,7 +126,7 @@ header h1 {
   font-weight: 300;
   letter-spacing: 3rem;
 }
-@media (max-width: 480px) {
+@media (max-width: 375px) {
   header h1 {
     font-size: 4rem;
   }
@@ -226,7 +230,7 @@ main {
   grid-area: main;
   padding: 5rem;
 }
-@media (max-width: 480px) {
+@media (max-width: 375px) {
   main {
     padding: 5rem 2rem;
   }
@@ -277,7 +281,7 @@ footer {
   padding: 5rem;
   background: var(--text);
 }
-@media (max-width: 480px) {
+@media (max-width: 375px) {
   footer {
     padding: 5rem 1.5rem;
   }
@@ -325,7 +329,7 @@ form input {
 form input::placeholder {
   color: var(--text);
 }
-@media (max-width: 480px) {
+@media (max-width: 375px) {
   form input {
     min-width: 200px;
   }
