--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ img {
 }
 @media (max-width: 480px) {
   .grid-container {
-    grid: "header" auto "main" auto "picture" auto "aside" auto "footer" auto/auto;
+    grid: "header" 1fr "main" 1fr "picture" 1fr "aside" 1fr "footer" 1fr/1fr;
   }
 }
 
