--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ img {
 }
 @media (max-width: 480px) {
   .grid-container {
-    grid: "header" 1fr "main" 1fr "picture" 1fr "aside" 1fr "footer" 1fr/1fr;
+    grid: "header" auto "main" auto "picture" auto "aside" auto "footer" auto/auto;
   }
 }
 
@@ -117,7 +117,7 @@ header {
 }
 @media (max-width: 480px) {
   header {
-    padding: 5rem 2rem;
+    padding: 4rem 2rem;
   }
 }
 header h1 {
@@ -128,11 +128,19 @@ header h1 {
 }
 @media (max-width: 480px) {
   header h1 {
-    font-size: 4rem;
+    font-size: 3rem;
+    letter-spacing: 2rem;
+    line-height: 6rem;
+    font-weight: 700;
   }
 }
 header p {
   letter-spacing: 0.5rem;
+}
+@media (max-width: 480px) {
+  header p {
+    letter-spacing: normal;
+  }
 }
 header span {
   display: inline-block;
@@ -203,7 +211,7 @@ aside .block .social-container {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem rem;
   border-radius: 5px;
   transition: all 0.2s;
   cursor: pointer;
