--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,7 @@
 /** @format */
 :root {
   --fontfamily: "Mulish", sans-serif;
+  --logo: "Dancing Script", cursive;
   --light: #74deff;
   --primary: #393b3e;
   --dark: #107bb0;
