--- a/css/variables.css
+++ b/css/variables.css
@@ -6,7 +6,7 @@
   --primary: #393b3e;
   --dark: #107bb0;
   --text: #333;
-  --background: #fafafa;
+  --background: #eff8fa;
   --hint: #999;
   --border: #ddd;
   --ln: #0a66c2;
