--- a/scss/pizza.scss
+++ b/scss/pizza.scss
@@ -23,7 +23,7 @@ header {
 	position: sticky;
 	top: 0;
 	box-shadow: 0px 1px 10px black;
-	padding: 1rem 3rem;
+	padding: 0 5vw;
 	z-index: 1;
 	@include xs {
 		flex-direction: column;
@@ -71,25 +71,26 @@ header {
 }
 
 .vp {
+	text-align: center;
+	background: var(--border);
 	display: flex;
 	flex-direction: row-reverse;
-	height: calc(100vh - 90px);
+	height: calc(100vh - 70px);
 	@include xs {
 		flex-direction: column;
 		height: auto;
 	}
 	aside {
 		overflow: hidden;
-		background: var(--border);
-		max-width: 15vw;
-		padding: 5rem 1.5rem;
+		max-width: 20vw;
+		margin: 2vw;
 		@include xs {
 			max-width: 100vw;
 			padding: 2rem 1.5rem;
 		}
 		h3 {
+			margin-top: 2vw;
 			font-size: 3.5rem;
-			padding: 0 1.5rem;
 			span:first-child {
 				color: #bb2a03;
 			}
@@ -106,20 +107,18 @@ header {
 			}
 		}
 		h4 {
-			padding: 0 1.5rem 1rem 1.5rem;
 			@include xs {
 				padding: 0 1.5rem;
 			}
 		}
 		p {
-			padding: 0 1.5rem;
 			letter-spacing: 0.1rem;
 		}
 		.separation-vp {
 			background: var(--primary);
 			height: 2px;
 			width: 50%;
-			margin: 2rem 1.5rem;
+			margin: 6vw auto;
 			@include xs {
 				margin: 2rem 1.5rem;
 			}
@@ -130,20 +129,18 @@ header {
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		width: 85vw;
-		background: url(/img/accueil_1.WEBP) center center / cover;
-		filter: grayscale(50%);
+		width: 80vw;
+		background: url(/img/accueil_1\ 11.jpg) center center / cover;
 
-		opacity: 0.9;
 		color: white;
 		@include xs {
 			width: 100vw;
 			box-shadow: 0px 1px 10px black;
-			filter: grayscale(80%);
 		}
 		h1 {
-			font-size: 10rem;
-			text-shadow: 10px 15px 15px black;
+			text-align: center;
+			font-size: 7rem;
+			text-shadow: 5px 5px 15px black;
 			letter-spacing: 0.4rem;
 			@include xs {
 				font-size: 4rem;
@@ -156,7 +153,7 @@ header {
 			letter-spacing: 2px;
 			font-size: 3rem;
 			margin: 8rem 0rem 4rem 0;
-			text-shadow: 10px 15px 15px black;
+			text-shadow: 5px 5px 5px black;
 			font-weight: 700;
 			text-align: center;
 			line-height: 5rem;
@@ -164,18 +161,22 @@ header {
 				margin: 3rem 0rem 3rem 0rem;
 				font-size: 1.5rem;
 				text-align: center;
-				text-shadow: 1px 1px 4px black;
+				text-shadow: 5px 5px 5px black;
 				line-height: 2rem;
 				padding: 1rem;
 			}
 		}
 		.city {
 			border: 2px solid white;
+			background-color: white;
+			opacity: 0.8;
 			padding: 2rem;
 			font-weight: 700;
-			text-shadow: 10px 15px 15px black;
 			font-size: 3rem;
 			border-radius: 30px;
+			span {
+				color: var(--primary);
+			}
 			@include xs {
 				font-size: 2rem;
 				padding: 1rem;
