--- a/css/pizza.css
+++ b/css/pizza.css
@@ -56,12 +56,17 @@ img {
   color: var(--hint);
 }
 
+/** @format */
 .mb-5 {
   margin-bottom: 5rem !important;
 }
 
 .mb-2 {
   margin-bottom: 2rem !important;
+}
+
+.mb-10 {
+  margin-bottom: 10rem !important;
 }
 
 @keyframes bounce {
