--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -1,7 +1,13 @@
+/** @format */
+
 .mb-5 {
-  margin-bottom: 5rem !important;
+	margin-bottom: 5rem !important;
 }
 
 .mb-2 {
-  margin-bottom: 2rem !important;
+	margin-bottom: 2rem !important;
+}
+
+.mb-10 {
+	margin-bottom: 10rem !important;
 }
