--- a/css/variables.css
+++ b/css/variables.css
@@ -2,7 +2,7 @@
 :root {
   --fontfamily: "Mulish", sans-serif;
   --logo: "Dancing Script", cursive;
-  --light: #74deff;
+  --light: #1b5262;
   --primary: #393b3e;
   --dark: #107bb0;
   --text: #333;
