--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,7 +6,7 @@
 	--logo: 'Dancing Script', cursive;
 
 	// COlORS
-	--light: #74deff;
+	--light: #1b5262;
 	--primary: #393b3e;
 	--dark: #107bb0;
 	--text: #333;
