--- a/css/pizza.css
+++ b/css/pizza.css
@@ -47,7 +47,7 @@ img {
 }
 
 .text-primary {
-  color: var(--light);
+  color: var(--ln);
 }
 .text-hint {
   color: var(--hint);
@@ -120,7 +120,7 @@ header {
   }
 }
 header .logo {
-  margin-bottom: 1.5rem;
+  margin: 0.5rem 0 1.5rem 0;
   padding-bottom: 0.5rem;
   font-family: var(--logo);
   font-size: 2rem;
@@ -225,7 +225,7 @@ header .menu a {
 }
 @media (max-width: 480px) {
   .vp aside .separation-vp {
-    margin: 2rem 1.5rem;
+    margin: 6vh auto;
   }
 }
 .vp main {
@@ -246,7 +246,7 @@ header .menu a {
 .vp main h1 {
   text-align: center;
   font-size: 7rem;
-  text-shadow: 5px 5px 15px black;
+  text-shadow: 0px 1px 10px black;
   letter-spacing: 0.4rem;
 }
 @media (max-width: 480px) {
@@ -254,14 +254,14 @@ header .menu a {
     font-size: 4rem;
     text-align: center;
     margin-top: 2rem;
-    text-shadow: 1px 1px 4px black;
+    text-shadow: 0px 1px 10px black;
   }
 }
 .vp main p {
   letter-spacing: 2px;
   font-size: 3rem;
   margin: 8rem 0rem 4rem 0;
-  text-shadow: 5px 5px 5px black;
+  text-shadow: 0px 1px 10px black;
   font-weight: 700;
   text-align: center;
   line-height: 5rem;
@@ -271,7 +271,7 @@ header .menu a {
     margin: 3rem 0rem 3rem 0rem;
     font-size: 1.5rem;
     text-align: center;
-    text-shadow: 5px 5px 5px black;
+    text-shadow: 0px 1px 10px black;
     line-height: 2rem;
     padding: 1rem;
   }
