--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ img {
 }
 
 .text-primary {
-  color: var(--light);
+  color: var(--ln);
 }
 .text-hint {
   color: var(--hint);
@@ -189,14 +189,31 @@ aside .block .bar-skill .bar-skill-progress {
   top: 0;
   left: 0;
   width: 80%;
-  background: var(--light);
+  background: var(--ln);
+}
+aside .block .bar-skill .bar-skill-progress-3 {
+  position: absolute;
+  height: 5px;
+  top: 0;
+  left: 0;
+  width: 50%;
+  background: var(--ln);
 }
 aside .block .bar-skill .bar-skill-dot {
   position: absolute;
   height: 10px;
   width: 10px;
-  background: var(--dark);
+  background: var(--ln);
   left: calc(80% - 5px);
+  top: -2.5px;
+  transform: rotate(45deg);
+}
+aside .block .bar-skill .bar-skill-dot-3 {
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  background: var(--ln);
+  left: calc(50% - 5px);
   top: -2.5px;
   transform: rotate(45deg);
 }
@@ -271,11 +288,12 @@ main .pf-content {
   border-radius: 30px;
   color: white;
   padding: 1.5rem;
-  background: linear-gradient(to right, var(--primary), var(--light));
+  background: #001c35;
+  box-shadow: 1px 3px 10px var(--border);
 }
 main .pf-content:hover {
   background: var(--dark);
-  transform: scale(1.5);
+  transform: scale(1.2);
   transition: all 0.2s;
 }
 
