--- a/scss/pizza.scss
+++ b/scss/pizza.scss
@@ -30,7 +30,7 @@ header {
 		align-items: center;
 	}
 	.logo {
-		margin-bottom: 1.5rem;
+		margin: 0.5rem 0 1.5rem 0;
 		padding-bottom: 0.5rem;
 		font-family: var(--logo);
 		font-size: 2rem;
@@ -120,7 +120,7 @@ header {
 			width: 50%;
 			margin: 6vw auto;
 			@include xs {
-				margin: 2rem 1.5rem;
+				margin: 6vh auto;
 			}
 		}
 	}
@@ -140,20 +140,20 @@ header {
 		h1 {
 			text-align: center;
 			font-size: 7rem;
-			text-shadow: 5px 5px 15px black;
+			text-shadow: 0px 1px 10px black;
 			letter-spacing: 0.4rem;
 			@include xs {
 				font-size: 4rem;
 				text-align: center;
 				margin-top: 2rem;
-				text-shadow: 1px 1px 4px black;
+				text-shadow: 0px 1px 10px black;
 			}
 		}
 		p {
 			letter-spacing: 2px;
 			font-size: 3rem;
 			margin: 8rem 0rem 4rem 0;
-			text-shadow: 5px 5px 5px black;
+			text-shadow: 0px 1px 10px black;
 			font-weight: 700;
 			text-align: center;
 			line-height: 5rem;
@@ -161,7 +161,7 @@ header {
 				margin: 3rem 0rem 3rem 0rem;
 				font-size: 1.5rem;
 				text-align: center;
-				text-shadow: 5px 5px 5px black;
+				text-shadow: 0px 1px 10px black;
 				line-height: 2rem;
 				padding: 1rem;
 			}
