--- a/css/pizza.css
+++ b/css/pizza.css
@@ -183,6 +183,8 @@ header .menu a {
 }
 @media (max-width: 480px) {
   .vp aside {
+    margin: 0;
+    border-top: 1rem solid white;
     max-width: 100vw;
     padding: 2rem 1.5rem;
   }
@@ -234,19 +236,19 @@ header .menu a {
   justify-content: center;
   align-items: center;
   width: 80vw;
-  background: url(/img/accueil_1\ 11.jpg) center center/cover;
+  background: url(/img/nik-owens-40OJLYVWeeM-unsplash.jpeg) center center/cover;
   color: white;
 }
 @media (max-width: 480px) {
   .vp main {
     width: 100vw;
-    box-shadow: 0px 1px 10px black;
+    box-shadow: var(--shadow-title);
   }
 }
 .vp main h1 {
   text-align: center;
   font-size: 7rem;
-  text-shadow: 0px 1px 10px black;
+  text-shadow: var(--shadow-title);
   letter-spacing: 0.4rem;
 }
 @media (max-width: 480px) {
@@ -254,14 +256,13 @@ header .menu a {
     font-size: 4rem;
     text-align: center;
     margin-top: 2rem;
-    text-shadow: 0px 1px 10px black;
   }
 }
 .vp main p {
   letter-spacing: 2px;
   font-size: 3rem;
   margin: 8rem 0rem 4rem 0;
-  text-shadow: 0px 1px 10px black;
+  text-shadow: var(--shadow-title);
   font-weight: 700;
   text-align: center;
   line-height: 5rem;
@@ -271,7 +272,6 @@ header .menu a {
     margin: 3rem 0rem 3rem 0rem;
     font-size: 1.5rem;
     text-align: center;
-    text-shadow: 0px 1px 10px black;
     line-height: 2rem;
     padding: 1rem;
   }
@@ -280,9 +280,9 @@ header .menu a {
   border: 2px solid white;
   background-color: white;
   opacity: 0.8;
-  padding: 2rem;
+  padding: 1rem 2rem;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 2rem;
   border-radius: 30px;
 }
 .vp main .city span {
@@ -294,6 +294,56 @@ header .menu a {
     padding: 1rem;
     margin-bottom: 2rem;
     text-align: center;
+  }
+}
+
+.avis {
+  background: url(/img/austin-ban-IS6RwpuEJpY-unsplash.jpg) center bottom/cover;
+  height: 30vh;
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+}
+@media (max-width: 480px) {
+  .avis {
+    height: 35vh;
+  }
+}
+.avis h1 {
+  font-size: 10rem;
+  text-shadow: var(--shadow-title);
+}
+@media (max-width: 480px) {
+  .avis h1 {
+    font-size: 3rem;
+  }
+}
+.avis a {
+  display: block;
+  color: var(--primary);
+  margin-top: 5vh;
+  background-color: white;
+  border: 2px solid white;
+  padding: 2rem;
+  border-radius: 30px;
+  font-weight: 700;
+  box-shadow: var(--shadow-title);
+  transition: all 0.2s;
+}
+.avis a:hover {
+  background-color: black;
+  color: white;
+}
+@media (max-width: 480px) {
+  .avis a {
+    font-size: 1.5rem;
+    padding: 1rem;
+    background-color: black;
+    color: white;
   }
 }
 
