--- a/scss/pizza.scss
+++ b/scss/pizza.scss
@@ -85,6 +85,8 @@ header {
 		max-width: 20vw;
 		margin: 2vw;
 		@include xs {
+			margin: 0;
+			border-top: 1rem solid white;
 			max-width: 100vw;
 			padding: 2rem 1.5rem;
 		}
@@ -130,30 +132,30 @@ header {
 		justify-content: center;
 		align-items: center;
 		width: 80vw;
-		background: url(/img/accueil_1\ 11.jpg) center center / cover;
+		background: url(/img/nik-owens-40OJLYVWeeM-unsplash.jpeg) center center /
+			cover;
 
 		color: white;
 		@include xs {
 			width: 100vw;
-			box-shadow: 0px 1px 10px black;
+			box-shadow: var(--shadow-title);
 		}
 		h1 {
 			text-align: center;
 			font-size: 7rem;
-			text-shadow: 0px 1px 10px black;
+			text-shadow: var(--shadow-title);
 			letter-spacing: 0.4rem;
 			@include xs {
 				font-size: 4rem;
 				text-align: center;
 				margin-top: 2rem;
-				text-shadow: 0px 1px 10px black;
 			}
 		}
 		p {
 			letter-spacing: 2px;
 			font-size: 3rem;
 			margin: 8rem 0rem 4rem 0;
-			text-shadow: 0px 1px 10px black;
+			text-shadow: var(--shadow-title);
 			font-weight: 700;
 			text-align: center;
 			line-height: 5rem;
@@ -161,7 +163,6 @@ header {
 				margin: 3rem 0rem 3rem 0rem;
 				font-size: 1.5rem;
 				text-align: center;
-				text-shadow: 0px 1px 10px black;
 				line-height: 2rem;
 				padding: 1rem;
 			}
@@ -170,9 +171,9 @@ header {
 			border: 2px solid white;
 			background-color: white;
 			opacity: 0.8;
-			padding: 2rem;
+			padding: 1rem 2rem;
 			font-weight: 700;
-			font-size: 3rem;
+			font-size: 2rem;
 			border-radius: 30px;
 			span {
 				color: var(--primary);
@@ -183,6 +184,51 @@ header {
 				margin-bottom: 2rem;
 				text-align: center;
 			}
+		}
+	}
+}
+.avis {
+	background: url(/img/austin-ban-IS6RwpuEJpY-unsplash.jpg) center bottom /
+		cover;
+	height: 30vh;
+	margin: 1rem auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	text-align: center;
+	@include xs {
+		height: 35vh;
+	}
+	h1 {
+		font-size: 10rem;
+		text-shadow: var(--shadow-title);
+
+		@include xs {
+			font-size: 3rem;
+		}
+	}
+	a {
+		display: block;
+		color: var(--primary);
+		margin-top: 5vh;
+		background-color: white;
+		border: 2px solid white;
+		padding: 2rem;
+		border-radius: 30px;
+		font-weight: 700;
+		box-shadow: var(--shadow-title);
+		transition: all 0.2s;
+		&:hover {
+			background-color: black;
+			color: white;
+		}
+		@include xs {
+			font-size: 1.5rem;
+			padding: 1rem;
+			background-color: black;
+			color: white;
 		}
 	}
 }
