--- a/css/pizza.css
+++ b/css/pizza.css
@@ -242,6 +242,7 @@ header .menu a {
 @media (max-width: 480px) {
   .vp main {
     width: 100vw;
+    height: calc(100vh - 145px);
     box-shadow: var(--shadow-title);
   }
 }
@@ -253,9 +254,8 @@ header .menu a {
 }
 @media (max-width: 480px) {
   .vp main h1 {
-    font-size: 4rem;
+    font-size: 6rem;
     text-align: center;
-    margin-top: 2rem;
   }
 }
 .vp main p {
@@ -269,19 +269,19 @@ header .menu a {
 }
 @media (max-width: 480px) {
   .vp main p {
-    margin: 3rem 0rem 3rem 0rem;
-    font-size: 1.5rem;
+    margin: 8vh 0rem 8vh 0rem;
+    font-size: 2rem;
     text-align: center;
-    line-height: 2rem;
+    line-height: 4rem;
     padding: 1rem;
   }
 }
 .vp main .city {
   border: 2px solid white;
   background-color: white;
-  opacity: 0.8;
+  opacity: 0.7;
   padding: 1rem 2rem;
-  font-weight: 700;
+  font-weight: 900;
   font-size: 2rem;
   border-radius: 30px;
 }
@@ -290,8 +290,10 @@ header .menu a {
 }
 @media (max-width: 480px) {
   .vp main .city {
-    font-size: 2rem;
-    padding: 1rem;
+    font-size: 1.6rem;
+    padding: 1rem 5rem;
+    border-radius: 5px;
+    border: 0;
     margin-bottom: 2rem;
     text-align: center;
   }
