--- a/css/variables.css
+++ b/css/variables.css
@@ -10,7 +10,7 @@
   --hint: #999;
   --border: #ddd;
   --ln: #0a66c2;
-  --shadow-title: text-shadow: 0px 1px 10px black;
+  --shadow-title: 0px 0.3px 5px var(--hint);
 }
 
 /*# sourceMappingURL=variables.css.map */
