--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -14,5 +14,5 @@
 	--hint: #999;
 	--border: #ddd;
 	--ln: #0a66c2;
-	--shadow-title: text-shadow: 0px 1px 10px black;
+	--shadow-title: 0px 0.3px 5px var(--hint);
 }
