--- a/css/pizza.css
+++ b/css/pizza.css
@@ -358,6 +358,12 @@ header .menu a {
   display: flex;
   justify-content: space-around;
 }
+@media (max-width: 480px) {
+  .contact {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
 .contact .clock {
   background: var(--border);
   box-shadow: var(--shadow-title);
@@ -367,7 +373,15 @@ header .menu a {
   display: grid;
   grid: "h2 " 1fr "clock" 4fr/42vw;
 }
+@media (max-width: 480px) {
+  .contact .clock {
+    grid: "h2 " 1fr "clock" 10fr/1fr;
+    margin: 1rem;
+    padding: 0.5rem;
+  }
+}
 .contact .clock h2 {
+  text-shadow: var(--shadow-title);
   text-align: center;
   grid-area: h2;
   font-size: 4rem;
@@ -375,8 +389,53 @@ header .menu a {
 .contact .clock h2 i {
   margin: 0 1rem 4rem 0;
 }
+@media (max-width: 480px) {
+  .contact .clock h2 i {
+    margin: 0;
+  }
+}
+@media (max-width: 480px) {
+  .contact .clock h2 {
+    font-size: 2.5rem;
+    margin: 0;
+  }
+}
 .contact .clock .clock-content {
   grid-area: clock;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  place-self: center top;
+}
+@media (max-width: 480px) {
+  .contact .clock .clock-content {
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+  }
+}
+.contact .clock .clock-content .day {
+  margin: 2vw;
+  text-align: center;
+  font-size: 2rem;
+  background-color: white;
+  line-height: 3rem;
+  padding: 3rem;
+  border-radius: 10px;
+  box-shadow: var(--shadow-title);
+}
+.contact .clock .clock-content .day p:first-child {
+  font-weight: 700;
+  margin-bottom: 5rem;
+}
+@media (max-width: 480px) {
+  .contact .clock .clock-content .day p:first-child {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 480px) {
+  .contact .clock .clock-content .day {
+    width: 40vw;
+  }
 }
 .contact .service {
   background: var(--border);
@@ -387,7 +446,14 @@ header .menu a {
   display: grid;
   grid: "h2 " 1fr "service" 4fr/42vw;
 }
+@media (max-width: 480px) {
+  .contact .service {
+    grid: "h2 " 1fr "service" 10fr/1fr;
+    padding: 1rem;
+  }
+}
 .contact .service h2 {
+  text-shadow: var(--shadow-title);
   text-align: center;
   font-size: 4rem;
   grid-area: h2;
@@ -395,8 +461,50 @@ header .menu a {
 .contact .service h2 i {
   margin: 0 1rem 4rem 0;
 }
+@media (max-width: 480px) {
+  .contact .service h2 {
+    font-size: 2.5rem;
+  }
+}
 .contact .service .service-content {
   grid-area: service;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  place-self: center top;
+}
+.contact .service .service-content .service-item {
+  margin: 2vw 1vw;
+  padding: 3rem;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: var(--shadow-title);
+}
+@media (max-width: 480px) {
+  .contact .service .service-content .service-item {
+    margin: 1rem;
+    padding: 2rem 3rem;
+  }
+}
+.contact .service .service-content .service-item h3 {
+  font-size: 2rem;
+  line-height: 5rem;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+.contact .service .service-content .service-item h3 i {
+  margin-right: 1rem;
+  font-size: 3rem;
+}
+@media (max-width: 480px) {
+  .contact .service .service-content .service-item h3 {
+    line-height: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+  .contact .service .service-content .service-item h3 i {
+    margin: 0 2.5rem 1rem 2.5rem;
+  }
 }
 
 /*# sourceMappingURL=pizza.css.map */
