--- a/scss/pizza.scss
+++ b/scss/pizza.scss
@@ -242,6 +242,10 @@ header {
 	margin: 0;
 	display: flex;
 	justify-content: space-around;
+	@include xs {
+		flex-direction: column;
+		justify-content: center;
+	}
 
 	.clock {
 		background: var(--border);
@@ -253,16 +257,61 @@ header {
 		grid:
 			'h2 ' 1fr
 			'clock' 4fr/ 42vw;
+		@include xs {
+			grid:
+				'h2 ' 1fr
+				'clock' 10fr /
+				1fr;
+			margin: 1rem;
+			padding: 0.5rem;
+		}
+
 		h2 {
+			text-shadow: var(--shadow-title);
 			text-align: center;
 			grid-area: h2;
 			font-size: 4rem;
 			i {
 				margin: 0 1rem 4rem 0;
+				@include xs {
+					margin: 0;
+				}
+			}
+			@include xs {
+				font-size: 2.5rem;
+				margin: 0;
 			}
 		}
 		.clock-content {
 			grid-area: clock;
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr;
+			grid-template-rows: 1fr 1fr;
+			place-self: center top;
+			@include xs {
+				grid-template-columns: 1fr 1fr;
+				place-items: center;
+			}
+			.day {
+				margin: 2vw;
+				text-align: center;
+				font-size: 2rem;
+				background-color: white;
+				line-height: 3rem;
+				padding: 3rem;
+				border-radius: 10px;
+				box-shadow: var(--shadow-title);
+				p:first-child {
+					font-weight: 700;
+					margin-bottom: 5rem;
+					@include xs {
+						margin-bottom: 2rem;
+					}
+				}
+				@include xs {
+					width: 40vw;
+				}
+			}
 		}
 	}
 	.service {
@@ -275,16 +324,60 @@ header {
 		grid:
 			'h2 ' 1fr
 			'service' 4fr/ 42vw;
+		@include xs {
+			grid:
+				'h2 ' 1fr
+				'service' 10fr /
+				1fr;
+			padding: 1rem;
+		}
 		h2 {
+			text-shadow: var(--shadow-title);
 			text-align: center;
 			font-size: 4rem;
 			grid-area: h2;
 			i {
 				margin: 0 1rem 4rem 0;
 			}
+			@include xs {
+				font-size: 2.5rem;
+			}
 		}
 		.service-content {
 			grid-area: service;
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			grid-template-rows: 1fr 1fr;
+			place-self: center top;
+			.service-item {
+				margin: 2vw 1vw;
+				padding: 3rem;
+				background-color: white;
+				border-radius: 10px;
+				box-shadow: var(--shadow-title);
+				@include xs {
+					margin: 1rem;
+					padding: 2rem 3rem;
+				}
+				h3 {
+					font-size: 2rem;
+					line-height: 5rem;
+					text-align: center;
+					margin-bottom: 5rem;
+					i {
+						margin-right: 1rem;
+						font-size: 3rem;
+					}
+					@include xs {
+						line-height: 2rem;
+						text-align: center;
+						i {
+							margin: 0 2.5rem 1rem 2.5rem;
+						}
+						margin-bottom: 1rem;
+					}
+				}
+			}
 		}
 	}
 }
