--- a/css/pizza.css
+++ b/css/pizza.css
@@ -169,7 +169,7 @@ header .menu a {
 
 .vp {
   text-align: center;
-  background: var(--border);
+  background: white;
   display: flex;
   flex-direction: row-reverse;
   height: calc(100vh - 70px);
@@ -195,6 +195,7 @@ header .menu a {
 }
 .vp aside h3 {
   margin-top: 2vw;
+  letter-spacing: 0.5rem;
   font-size: 3.5rem;
 }
 .vp aside h3 span:first-child {
@@ -215,6 +216,9 @@ header .menu a {
     margin: 0;
   }
 }
+.vp aside h4 {
+  line-height: 6rem;
+}
 @media (max-width: 480px) {
   .vp aside h4 {
     padding: 0 1.5rem;
@@ -222,6 +226,7 @@ header .menu a {
 }
 .vp aside p {
   letter-spacing: 0.1rem;
+  line-height: 3rem;
 }
 .vp aside .separation-vp {
   background: var(--primary);
@@ -253,7 +258,7 @@ header .menu a {
 .vp main h1 {
   text-align: center;
   font-size: 7rem;
-  text-shadow: var(--shadow-title);
+  text-shadow: 1px 1px 5px black;
   letter-spacing: 0.4rem;
 }
 @media (max-width: 480px) {
@@ -266,7 +271,7 @@ header .menu a {
   letter-spacing: 2px;
   font-size: 3rem;
   margin: 8rem 0rem 4rem 0;
-  text-shadow: var(--shadow-title);
+  text-shadow: 1px 1px 5px black;
   font-weight: 700;
   text-align: center;
   line-height: 5rem;
@@ -306,7 +311,7 @@ header .menu a {
 .avis {
   background: url(/img/austin-ban-IS6RwpuEJpY-unsplash.jpg) center bottom/cover;
   height: 30vh;
-  margin: 1rem auto;
+  margin: 0.1rem auto 1rem auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -321,7 +326,7 @@ header .menu a {
 }
 .avis h1 {
   font-size: 10rem;
-  text-shadow: var(--shadow-title);
+  text-shadow: 1px 1px 5px black;
 }
 @media (max-width: 480px) {
   .avis h1 {
@@ -354,157 +359,97 @@ header .menu a {
 }
 
 .contact {
-  margin: 0;
   display: flex;
   justify-content: space-around;
+  line-height: 3rem;
 }
 @media (max-width: 480px) {
   .contact {
     flex-direction: column;
-    justify-content: center;
   }
 }
-.contact .clock {
-  background: var(--border);
-  box-shadow: var(--shadow-title);
-  padding: 3rem;
-  margin: 0 1rem 1rem;
-  border-radius: 10px;
-  display: grid;
-  grid: "h2 " 1fr "clock" 4fr/42vw;
+.contact iframe {
+  position: relative;
+  width: 100%;
+  height: 200px;
 }
-@media (max-width: 480px) {
-  .contact .clock {
-    grid: "h2 " 1fr "clock" 10fr/1fr;
-    margin: 1rem;
-    padding: 0.5rem;
-  }
-}
-.contact .clock h2 {
-  text-shadow: var(--shadow-title);
-  text-align: center;
-  grid-area: h2;
+.contact h2 {
   font-size: 4rem;
-}
-.contact .clock h2 i {
-  margin: 0 1rem 4rem 0;
-}
-@media (max-width: 480px) {
-  .contact .clock h2 i {
-    margin: 0;
-  }
-}
-@media (max-width: 480px) {
-  .contact .clock h2 {
-    font-size: 2.5rem;
-    margin: 0;
-  }
-}
-.contact .clock .clock-content {
-  grid-area: clock;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  place-self: center top;
-}
-@media (max-width: 480px) {
-  .contact .clock .clock-content {
-    grid-template-columns: 1fr 1fr;
-    place-items: center;
-  }
-}
-.contact .clock .clock-content .day {
-  margin: 2vw;
   text-align: center;
-  font-size: 2rem;
-  background-color: white;
-  line-height: 3rem;
-  padding: 3rem;
-  border-radius: 10px;
-  box-shadow: var(--shadow-title);
+  padding: 2rem;
+  background: #222;
+  color: white;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.273);
 }
-.contact .clock .clock-content .day p:first-child {
+@media (max-width: 480px) {
+  .contact h2 {
+    font-size: 2rem;
+  }
+}
+.contact > div {
+  width: 32vw;
+  margin-bottom: 1rem;
+}
+@media (max-width: 480px) {
+  .contact > div {
+    width: 100%;
+    margin: 0;
+  }
+}
+.contact > div .jour {
   font-weight: 700;
-  margin-bottom: 5rem;
+}
+.contact > div > div {
+  padding: 2rem;
+  border: 2px solid var(--primary);
+  height: 250px;
 }
 @media (max-width: 480px) {
-  .contact .clock .clock-content .day p:first-child {
-    margin-bottom: 2rem;
+  .contact > div > div {
+    height: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.248);
   }
 }
-@media (max-width: 480px) {
-  .contact .clock .clock-content .day {
-    width: 40vw;
-  }
+.contact .day {
+  display: flex;
+  justify-content: space-around;
 }
-.contact .service {
-  background: var(--border);
-  box-shadow: var(--shadow-title);
-  padding: 3rem;
-  margin: 0 1rem 1rem;
-  border-radius: 10px;
-  display: grid;
-  grid: "h2 " 1fr "service" 4fr/42vw;
-}
-@media (max-width: 480px) {
-  .contact .service {
-    grid: "h2 " 1fr "service" 10fr/1fr;
-    padding: 1rem;
-  }
-}
-.contact .service h2 {
-  text-shadow: var(--shadow-title);
+.contact .service-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   text-align: center;
-  font-size: 4rem;
-  grid-area: h2;
-}
-.contact .service h2 i {
-  margin: 0 1rem 4rem 0;
 }
 @media (max-width: 480px) {
-  .contact .service h2 {
-    font-size: 2.5rem;
+  .contact .service-content {
+    font-size: 1.5rem;
   }
 }
-.contact .service .service-content {
-  grid-area: service;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  place-self: center top;
+
+.carte {
+  margin: 10rem;
 }
-.contact .service .service-content .service-item {
-  margin: 2vw 1vw;
-  padding: 3rem;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: var(--shadow-title);
-}
-@media (max-width: 480px) {
-  .contact .service .service-content .service-item {
-    margin: 1rem;
-    padding: 2rem 3rem;
-  }
-}
-.contact .service .service-content .service-item h3 {
-  font-size: 2rem;
-  line-height: 5rem;
+.carte h1 {
+  color: white;
+  background: black;
   text-align: center;
-  margin-bottom: 5rem;
-}
-.contact .service .service-content .service-item h3 i {
-  margin-right: 1rem;
-  font-size: 3rem;
+  padding: 2rem;
+  margin-bottom: 1rem;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.684);
 }
 @media (max-width: 480px) {
-  .contact .service .service-content .service-item h3 {
-    line-height: 2rem;
-    text-align: center;
-    margin-bottom: 1rem;
+  .carte {
+    margin: 2rem;
   }
-  .contact .service .service-content .service-item h3 i {
-    margin: 0 2.5rem 1rem 2.5rem;
-  }
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  font-size: 1rem;
+  background: var(--primary);
+  color: white;
 }
 
 /*# sourceMappingURL=pizza.css.map */
