--- a/scss/pizza.scss
+++ b/scss/pizza.scss
@@ -32,6 +32,8 @@ header {
 	@include xs {
 		flex-direction: column;
 		align-items: center;
+		position: sticky;
+		top: -7rem;
 	}
 	.logo {
 		margin: 0.5rem 0 1.5rem 0;
@@ -296,7 +298,7 @@ header {
 		justify-content: space-around;
 		text-align: center;
 		@include xs {
-			font-size: 1.5rem;
+			font-size: 1rem;
 		}
 	}
 }
