--- a/scss/pizza.scss
+++ b/scss/pizza.scss
@@ -201,7 +201,7 @@ header {
 .avis {
 	background: url(/img/austin-ban-IS6RwpuEJpY-unsplash.jpg) center bottom /
 		cover;
-	height: 30vh;
+	height: 60vh;
 	margin: 0.1rem auto 1rem auto;
 	display: flex;
 	flex-direction: column;
@@ -247,7 +247,7 @@ header {
 
 .contact {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	line-height: 3rem;
 	@include xs {
 		flex-direction: column;
@@ -268,7 +268,7 @@ header {
 		font-size: 4rem;
 		text-align: center;
 		padding: 2rem;
-		background: #222;
+		background: var(--primary);
 		color: white;
 		box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.273);
 		@include xs {
@@ -276,8 +276,9 @@ header {
 		}
 	}
 	> div {
-		width: 24vw;
+		width: 24.7vw;
 		margin-bottom: 1rem;
+		margin-top: 1rem;
 
 		@include xs {
 			width: 100%;
@@ -313,7 +314,7 @@ header {
 	.appel {
 		border: 2px solid var(--primary);
 		@include xs {
-			border-bottom: 7rem solid #222;
+			border-bottom: 5rem solid black;
 		}
 		p {
 			margin: 130px auto;
@@ -350,8 +351,7 @@ header {
 footer {
 	display: flex;
 	justify-content: space-between;
-	padding: 1rem;
-	font-size: 1rem;
+	padding: 2rem 1rem;
 	background: var(--primary);
 	color: white;
 }
